add image function

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                                     Data Structure(Tree)</button></a>
 
                   </li>
+                  <li>
+
+                        <a href="./img_size" target="_blank"><button
+                                    class="btn btn-primary btn-ghost btn-shine">
+                                    image</button></a>
+
+                  </li>
             </u>
       </div>
 
